--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body{
-    background-color: lightsteelblue;
+    background-color: ghostwhite;
 }
 
 h1{
     text-align: center;
     font-size: bold;
-    border: 1px solid lightgrey;
 }
