--- a/style.css
+++ b/style.css
@@ -6,3 +6,20 @@ h1{
     text-align: center;
     font-size: bold;
 }
+
+div{
+    padding: 2px;
+    margin: 2px;
+    background-color: aliceblue;
+}
+
+div, h3{
+    text-align: center;
+}
+
+footer{
+    padding: 4px;
+    margin: 2px;
+    text-align: left;
+    bottom: 0px;
+}
