--- a/style.css
+++ b/style.css
@@ -21,5 +21,6 @@ footer{
     padding: 4px;
     margin: 2px;
     text-align: left;
-    bottom: 0px;
+    border: 2px solid gray;
+    border-radius: 3px;
 }
